--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,8 @@
-# requirements.txt
-dash
-dash-bootstrap-components
-pandas
-plotly
-openpyxl
-chromadb
-llama-index
-llama-index-llms-groq
-llama-index-embeddings-huggingface
-python-dotenv
-gunicorn
+# requirements.txt - Ultra-lightweight for Render
+dash==2.14.2
+dash-bootstrap-components==1.5.0
+pandas==2.1.3
+plotly==5.18.0
+python-dotenv==1.0.0
+gunicorn==21.2.0
+requests==2.31.0
